# homework14

ex1/: CMakeLists.txt  ex1.cpp  ex1.h
ex2/: CMakeLists.txt  ex2.cpp  ex2.h
ex3/: CMakeLists.txt  ex3.cpp  ex3.h
ex4/: CMakeLists.txt  ex4.cpp  ex4.h
ex5/: CMakeLists.txt  ex5.cpp  ex5.h
ex6/: CMakeLists.txt  ex6.cpp  ex6.h
ex7/: CMakeLists.txt  ex7.cpp  ex7.h
ex8/: CMakeLists.txt  ex8.cpp  ex8.h
ex9_sea_battle/: CMakeLists.txt  ex9_sea_battle.cpp  ex9_sea_battle.h
