# CMakeList.txt: проект CMake для ex1; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

project ("ex1")

# Добавьте источник в исполняемый файл этого проекта.
add_executable (ex1 "ex1.cpp" "ex1.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
