# CMakeList.txt: проект CMake для ex4; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

project ("ex4")

# Добавьте источник в исполняемый файл этого проекта.
add_executable (ex4 "ex4.cpp" "ex4.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
