# CMakeList.txt: проект CMake для ex5; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

project ("ex5")

# Добавьте источник в исполняемый файл этого проекта.
add_executable (ex5 "ex5.cpp" "ex5.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
