# CMakeList.txt: проект CMake для ex6; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

project ("ex6")

# Добавьте источник в исполняемый файл этого проекта.
add_executable (ex6 "ex6.cpp" "ex6.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
