# CMakeList.txt: проект CMake для ex7; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

project ("ex7")

# Добавьте источник в исполняемый файл этого проекта.
add_executable (ex7 "ex7.cpp" "ex7.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
