# CMakeList.txt: проект CMake для ex8; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

project ("ex8")

# Добавьте источник в исполняемый файл этого проекта.
add_executable (ex8 "ex8.cpp" "ex8.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
