# CMakeList.txt: проект CMake для ex9_sea_battle; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

project ("ex9_sea_battle")

# Добавьте источник в исполняемый файл этого проекта.
add_executable (ex9_sea_battle "ex9_sea_battle.cpp" "ex9_sea_battle.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
